# ProTiler-Mut

./: Demo.ipynb  Dockerfile  README.md  protiler-mut.py  pyproject.toml  requirements.txt
3D_RRA_results/: ERCC2_Substructures_list.csv  ERCC2_cluster_1.pse  ERCC2_cluster_2.pse  ERCC2_cluster_3.pse
Clustering_results/: ATM_Cluster_Table.csv  ATM_Missense_Annotation_Table.csv  ATM_Substructures_list.csv  ERCC2_Cluster_Table.csv  ERCC2_Missense_Annotation_Table.csv  PNKP_Cluster_Table.csv  PNKP_Missense_Annotation_Table.csv
Input_samples/: GPR68_DMS_screen_cell.xlsx
Input_smaples/: GPR68_DMS_screen.xlsx
PPI_Mapping_results/: 2fys.pdb_interfaces.pse  2y9q.pdb_interfaces.pse  3tei.pdb_interfaces.pse  4fmq.pdb_interfaces.pse  7ugb.pdb_interfaces.pse  8pvu.pdb_interfaces.pse  ERCC2_[76, 235, 241, 606, 605]_PPI_Mapping_list.csv  MAPK1_131,316,318,322_ppi_interface_mutations.csv
StaticFiles/: Clinvar_genome.json  Pfam_domain_proteome.json  Phosphosite_genome.json  phosphosite_dic.json
Test/: BRCA2_ClustersDistribution_3D.pse  EGFR_Cluster_Annotation_Table.csv  ERCC2_Cluster_Annotation_Table.csv  FANCD2_ClustersDistribution_3D.pse  GPR68_ClustersDistribution_3D.pse  GPR68_ClustersDistribution_3D_Missense.pse  MAPK1_Cluster_Annotation_Table.csv  RAD50_ClustersDistribution_3D.pse
protiler-mut-modules/: Clustering.py  PPI_mapping.py  ThreeD_RRA.py
protiler_mut/: cli.py  cluster.py  ppi_mapping.py  threeD_rra.py
protiler_mut.egg-info/: PKG-INFO  SOURCES.txt
