[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
protiler-mut = "protiler_mut.cli:main"

[project]
name = "protiler-mut"
version = "0.1.0"
description = "Pipeline for comprehensive analysis of tiling mutagenesis data"
readme = "README.md"
license = { text = "GUN" }
authors = [{ name = "Wei He", email = "hwkobe.1027@gmail.com" }]
requires-python = ">=3.7"
dependencies = ["Bio","biopython==1.79","matplotlib==3.5.3","mygene==3.2.2",
                "pymol","Requests==2.32.3","rich==14.0.0","scikit_learn==0.20.0","scipy==1.7.3",
                "seaborn==0.13.2","setuptools==68.0.0","statsmodels==0.13.5","umap_learn==0.5.3","numpy>=1.20","pandas>=1.3"]

[project.urls]
"Homepage" = "https://github.com/MDhewei/ProTiler-Mut"

[tool.setuptools.packages.find]
# only look for packages whose names start with protiler_mut
include = ["protiler_mut*"]

